--- a/_posts/productions/2016-06-12-gangshow1.markdown
+++ b/_posts/productions/2016-06-12-gangshow1.markdown
@@ -14,3 +14,5 @@ categories: production
 <!-- Write the description below, no character limit -->
 
 Promotional video for their 2015 show. 'Come and have the night of nights, Blackpool Gang Show and Blackpool lights'. 
+
+We filmed their full show and created a DVD that was for sale during and after the show week. 
