--- a/_posts/productions/2016-06-12-dofegold.markdown
+++ b/_posts/productions/2016-06-12-dofegold.markdown
@@ -17,4 +17,4 @@ From the 9th July to the 12th July a group of 7 people took up the challenge of 
 
 Watch how they got on...
 
-<iframe src="https://drive.google.com/a/northfolk.co.uk/file/d/0Bz3YsAm1E_TtU1pTLWZ1Vmo1Y2s/preview" width="640" height="480"></iframe>
+<iframe src="https://drive.google.com/a/northfolk.co.uk/file/d/0Bz3YsAm1E_TtU1pTLWZ1Vmo1Y2s/preview" width="640" height="480" allowfullscreen="allowfullscreen"></iframe>
