--- a/_posts/productions/2016-06-12-scoutsagm 2.markdown
+++ b/_posts/productions/2016-06-12-scoutsagm 2.markdown
@@ -5,6 +5,7 @@ date:   2015-07-12 10:39:17 +0100
 tinyimage: productions/scouts/japan.png
 youtube:
 skills: Editing
+software: Final Cut Pro
 client: Matthew Hornby
 categories: production
 ---
