--- a/_posts/productions/2016-06-12-dofegold.markdown
+++ b/_posts/productions/2016-06-12-dofegold.markdown
@@ -5,6 +5,7 @@ date:   2016-07-25 10:39:17 +0100
 tinyimage: productions/dofe.png
 youtube: 
 skills: Filming, Editing
+software: Final Cut Pro
 client: Duke of Edinburgh Award
 categories: production
 ---
