--- a/_posts/productions/2016-06-12-gangshow1.markdown
+++ b/_posts/productions/2016-06-12-gangshow1.markdown
@@ -5,6 +5,7 @@ date:   2015-11-12 10:39:17 +0100
 tinyimage: productions/gangshow/logo.png
 youtube: https://www.youtube.com/embed/YaUXeLNx8sw
 skills: Filming, Editing
+software: Final Cut Pro
 client: Blackpool Scout Gang Show
 categories: production
 ---
