--- a/_posts/productions/2016-06-12-northern-star 2016.markdown
+++ b/_posts/productions/2016-06-12-northern-star 2016.markdown
@@ -5,6 +5,7 @@ date:   2016-07-31 10:39:17 +0100
 tinyimage: productions/northernstar/northernstar.png
 youtube: 
 skills: Filming, Editing
+software: Final Cut Pro
 client: Ashley Luke Lloyd
 categories: production
 ---
