--- a/_posts/productions/2016-06-12-scoutsagm 2016.markdown
+++ b/_posts/productions/2016-06-12-scoutsagm 2016.markdown
@@ -5,6 +5,7 @@ date:   2016-06-12 10:39:17 +0100
 tinyimage: productions/scouts/logo.png
 youtube: https://www.youtube.com/embed/JgdFPvYfVOg
 skills: Editing
+software: Final Cut Pro
 client: Blackpool District Scouts
 categories: production
 ---
