--- a/_posts/productions/2016-06-12-gangshow16.markdown
+++ b/_posts/productions/2016-06-12-gangshow16.markdown
@@ -1,6 +1,6 @@
 ---
 layout: production
-title:  "Blackpool Gang Show 2016 Promo"
+title:  "Blackpool Gang Show 2016"
 date:   2016-10-13 10:39:17 +0100
 tinyimage: productions/gangshow/logo.png
 largeimage: productions/largeimage/gs2016.png
